fixtures/cs-cmp-01/good/token-compare-no-crypto-import.ts
export function checkToken(token: string, expected: string) {
	return token === expected;
}
