fixtures/cs-cmp-01/bad/bcrypt-import-token-compare.ts
import bcrypt from "bcrypt";

export function checkToken(token: string, expected: string) {
	return token === expected;
}

void bcrypt;
